--- a/VaccineC/src/app/pages/home/home.component.html
+++ b/VaccineC/src/app/pages/home/home.component.html
@@ -4,7 +4,7 @@
         <app-toolbar></app-toolbar>
         <section id="center" class="section-main">
             <div id="is-content" class="flex-1 is-content is-content-grow">
-
+                <h1 class="mt-4 welcome">Bem-vindo(a), {{name}}!</h1>
             </div>
         </section>
     </div>
