--- a/VaccineC/src/app/pages/orcamentos/orcamentos.component.scss
+++ b/VaccineC/src/app/pages/orcamentos/orcamentos.component.scss
@@ -181,3 +181,12 @@ form {
 #budget-payment-table {
   padding-left: 0.75rem;
 }
+
+.highlight{
+  background: #42A948; /* green */
+}
+
+.selected {
+  background-color: whitesmoke !important;
+  font-weight: bold !important;
+}
