--- a/VaccineC/src/app/pages/home/home.component.scss
+++ b/VaccineC/src/app/pages/home/home.component.scss
@@ -76,3 +76,8 @@
 #is-content.is-content-grow {
     margin-left: -7.5em;
 }
+
+.welcome{
+    font-size: 2rem !important;
+    margin-left: -3rem;
+}
