Ajustes, acesso rapido topbar, visualizar senha

--- a/VaccineC/src/app/pages/forgot-password/forgot-password.component.scss
+++ b/VaccineC/src/app/pages/forgot-password/forgot-password.component.scss
@@ -18,6 +18,10 @@
     display: flex;
 }
 
+:host ::ng-deep.mat-spinner{
+    margin-right: 0.2rem !important;
+  }
+
 .is-section-content>.is-card {
     flex: 1;
 }
