--- a/VaccineC/src/app/pages/home/home.component.scss
+++ b/VaccineC/src/app/pages/home/home.component.scss
@@ -81,3 +81,7 @@
     font-size: 2rem !important;
     margin-left: -3rem;
 }
+
+:host ::ng-deep.mat-spinner{
+    margin-right: 0.2rem !important;
+  }
