--- a/VaccineC/src/app/pages/orcamentos/orcamentos.component.scss
+++ b/VaccineC/src/app/pages/orcamentos/orcamentos.component.scss
@@ -190,3 +190,7 @@ form {
   background-color: whitesmoke !important;
   font-weight: bold !important;
 }
+
+:host ::ng-deep.mat-spinner{
+  margin-right: 0.2rem !important;
+}
