--- a/VaccineC/src/app/pages/situacao-estoque/situacao-estoque.component.scss
+++ b/VaccineC/src/app/pages/situacao-estoque/situacao-estoque.component.scss
@@ -63,3 +63,7 @@
   color: var(--cor-produto);
   text-decoration: underline;
 }
+
+:host ::ng-deep.mat-spinner{
+  margin-right: 0.2rem !important;
+}
