--- a/VaccineC/src/app/shared/components/toolbar/toolbar.component.html
+++ b/VaccineC/src/app/shared/components/toolbar/toolbar.component.html
@@ -1,16 +1,18 @@
 <nav id="home-topbar" class="home-topbar-grow navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
     <!-- Topbar Search -->
-    <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
-        <div class="input-group">
-            
-            <input type="text" class="form-control bg-light border-0 small" placeholder="Procure por..."
-                aria-label="Search" aria-describedby="basic-addon2">
-            <div class="input-group-append">
-                <button class="btn btn-primary btn-search" type="button">
-                    <i class="fas fa-search fa-sm"></i>
-                </button>
-            </div>
-        </div>
+    <form class="d-none d-sm-inline-block form-inline mr-auto navbar-search">
+        <mat-form-field appearance="outline" class="col-sm-12 d-flex" style="width:50vw !important">
+            <mat-label>Acesso Rápido</mat-label>
+            <input type="text" id="ResourcesId" name="resource"
+               aria-label="Number" matInput #ResourcesIdinput 
+                 [matAutocomplete]="auto" [(ngModel)]="ResourcesId" [formControl]="myControl">
+            <mat-autocomplete  classList="max-height-panel" #auto="matAutocomplete" [displayWith]="displayState" (optionSelected)="onSelectionChanged($event)">
+                <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
+                    {{option.Name}}
+                </mat-option>
+            </mat-autocomplete>
+            <mat-icon matSuffix>search</mat-icon>
+        </mat-form-field>
     </form>
 
     <!-- Topbar Navbar -->
@@ -41,7 +43,7 @@
 
         <!-- Nav Item - Alerts -->
         <li class="nav-item dropdown no-arrow mx-1" dropdown [hidden]="isShowNotificationUser">
-            <a class="nav-link dropdown-toggle" href id="basic-link" dropdownToggle (click)="false" >
+            <a class="nav-link dropdown-toggle" href id="basic-link" dropdownToggle (click)="false">
                 <i class="fas fa-bell fa-fw"></i>
                 <span [hidden]="isNewNotification" class="badge badge-danger badge-counter">+{{newNotifications}}</span>
             </a>
@@ -51,18 +53,25 @@
                 <h6 class="dropdown-header">
                     Central de Notificações
                 </h6>
-                <li *ngFor="let element of notifications" style="padding-left: 1rem;" class="dropdown-item d-flex align-items-center" (click)="$event.stopPropagation()">
+                <li *ngFor="let element of notifications" style="padding-left: 1rem;"
+                    class="dropdown-item d-flex align-items-center" (click)="$event.stopPropagation()">
                     <div class="mr-1">
                         <div class="icon-circle {{element.MessageType == 'L' ? 'bg-warning' : 'bg-danger'}}">
                             <i class="fas fa-triangle-exclamation text-white notification-icon"></i>
                         </div>
                     </div>
                     <div class="col-sm-11">
-                        <div class="small-text {{element.Situation == 'X' ? 'message-bold' : ''}}">{{element.FormatedDate}}</div>
-                        <span class="text-gray-600 {{element.Situation == 'X' ? 'message-bold' : ''}}" >{{element.Message}}</span>
-                        <span title="Marcar como lido" [hidden]="element.Situation == 'X' ? false : true" style="float:right;cursor:pointer;margin-left:0.3rem;" (click)="markAsRead(element.ID, element.UserId, element.Message, element.MessageType)"><i class="fas fa-circle-check" style="color:#3d9f3d"></i></span>
-                        <span title="Remover" style="float:right;cursor: pointer;" (click)="remove(element.ID)"><i class="fas fa-circle-xmark" style="color:#DC3545"></i></span>
-                   
+                        <div class="small-text {{element.Situation == 'X' ? 'message-bold' : ''}}">
+                            {{element.FormatedDate}}</div>
+                        <span
+                            class="text-gray-600 {{element.Situation == 'X' ? 'message-bold' : ''}}">{{element.Message}}</span>
+                        <span title="Marcar como lido" [hidden]="element.Situation == 'X' ? false : true"
+                            style="float:right;cursor:pointer;margin-left:0.3rem;"
+                            (click)="markAsRead(element.ID, element.UserId, element.Message, element.MessageType)"><i
+                                class="fas fa-circle-check" style="color:#3d9f3d"></i></span>
+                        <span title="Remover" style="float:right;cursor: pointer;" (click)="remove(element.ID)"><i
+                                class="fas fa-circle-xmark" style="color:#DC3545"></i></span>
+
                     </div>
                 </li>
                 <li [style.display]="displayNone" class="dropdown-item d-flex align-items-center">
