--- a/VaccineC/src/app/pages/minha-conta/password-dialog.html
+++ b/VaccineC/src/app/pages/minha-conta/password-dialog.html
@@ -9,8 +9,11 @@
         <div class="div-row-input">
             <mat-form-field appearance="fill" class="col-sm-12">
                 <mat-label>Informe a nova Senha</mat-label>
-                <input type="password" matInput formControlName="Password" [maxlength]="255" id="Password" [(ngModel)]="Password" required>
-                <mat-error *ngIf="userPasswordForm.controls.Password.touched && userPasswordForm.controls.Password.invalid">
+                <input [type]="hide ? 'password' : 'text'"  matInput formControlName="Password" [maxlength]="255" [(ngModel)]="Password"
+                    required>
+                <mat-icon style="color:#5A5C69;" matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                <mat-error
+                    *ngIf="userPasswordForm.controls.Password.touched && userPasswordForm.controls.Password.invalid">
                     <span *ngIf="userPasswordForm.controls.Password.errors?.required">A Senha é obrigatória.</span>
                 </mat-error>
             </mat-form-field>
@@ -18,9 +21,13 @@
         <div class="div-row-input">
             <mat-form-field appearance="fill" class="col-sm-12">
                 <mat-label>Confirme a nova Senha</mat-label>
-                <input type="password" matInput formControlName="ConfirmPassword" [maxlength]="255" id="ConfirmPassword" [(ngModel)]="ConfirmPassword" required>            
-                <mat-error *ngIf="userPasswordForm.controls.ConfirmPassword.touched && userPasswordForm.controls.ConfirmPassword.invalid">
-                    <span *ngIf="userPasswordForm.controls.ConfirmPassword.errors?.required">A Confirmação da Senha é obrigatória.</span>
+                <input [type]="hideConfirm ? 'password' : 'text'" matInput formControlName="ConfirmPassword" [maxlength]="255" id="ConfirmPassword"
+                    [(ngModel)]="ConfirmPassword" required>
+                    <mat-icon style="color:#5A5C69;" matSuffix (click)="hideConfirm = !hideConfirm">{{hideConfirm ? 'visibility_off' : 'visibility'}}</mat-icon>
+                <mat-error
+                    *ngIf="userPasswordForm.controls.ConfirmPassword.touched && userPasswordForm.controls.ConfirmPassword.invalid">
+                    <span *ngIf="userPasswordForm.controls.ConfirmPassword.errors?.required">A Confirmação da Senha é
+                        obrigatória.</span>
                 </mat-error>
             </mat-form-field>
         </div>
