--- a/VaccineC/src/app/pages/situacao-estoque/situacao-estoque.component.html
+++ b/VaccineC/src/app/pages/situacao-estoque/situacao-estoque.component.html
@@ -189,7 +189,8 @@
                                                 <ng-container matColumnDef="Warning">
                                                     <mat-header-cell *matHeaderCellDef> </mat-header-cell>
                                                     <mat-cell *matCellDef="let element">
-                                                        <i title="Projeção Zerada" class="fa-solid fa-circle-exclamation"
+                                                        <i title="Projeção Zerada"
+                                                            class="fa-solid fa-circle-exclamation"
                                                             style="color:#FFCA2C;margin:5px"
                                                             [hidden]="isUnitsAfterApplicationZero(element.TotalUnitsAfterApplication)"></i>
                                                         <i title="Projeção Negativada"
@@ -201,7 +202,8 @@
 
                                                 <!-- Id Hidden Column -->
                                                 <ng-container matColumnDef="ProductId">
-                                                    <mat-header-cell *matHeaderCellDef [hidden]="show"> ID </mat-header-cell>
+                                                    <mat-header-cell *matHeaderCellDef [hidden]="show"> ID
+                                                    </mat-header-cell>
                                                     <mat-cell [hidden]="show" *matCellDef="let element">
                                                         {{element.ProductId}} </mat-cell>
                                                 </ng-container>
@@ -222,6 +224,91 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="col-sm-12 batch-discards mt-3">
+                        <div class="card shadow mb-4 h-100">
+                            <div class="card-header py-3">
+                                <h6 class="m-0 font-weight-bold text-gray-600">Unidades Descartadas
+                                </h6>
+                            </div>
+                            <div class="card-body">
+                                <div class="card-area h-100">
+                                    <div id="search-table">
+                                        <div class="col-sm-12 search-table-content mat-elevation-z2">
+                                            <table mat-table [dataSource]="dataSource4" class="col-sm-12" matSort
+                                                matSortActive="ProductName" matSortDirection="asc">
+                                                <ng-container matColumnDef="Batch">
+                                                    <mat-header-cell *matHeaderCellDef mat-sort-header> Lote </mat-header-cell>
+                                                    <mat-cell *matCellDef="let element">
+                                                        <div>
+                                                            <div>{{element.Batch}}</div>
+                                                            <div title="Produto" class="small-text">{{element.ProductSummaryBatch.Products.Name}}</div>
+                                                        </div>
+                                                    </mat-cell>
+                                                    <mat-footer-cell *matFooterCellDef> Total Unidades Descartadas
+                                                    </mat-footer-cell>
+                                                </ng-container>
+
+                                                <ng-container matColumnDef="User">
+                                                    <mat-header-cell *matHeaderCellDef mat-sort-header> Usuário
+                                                    </mat-header-cell>
+                                                    <mat-cell *matCellDef="let element">
+                                                        <div>
+                                                            <div>{{element.User.Person.Name}}</div>
+                                                            <div class="small-text">{{element.User.Email}}</div>
+                                                        </div>
+                                                    </mat-cell>
+                                                    <mat-footer-cell *matFooterCellDef> </mat-footer-cell>
+                                                </ng-container>
+
+                                                <ng-container matColumnDef="DiscardedUnits">
+                                                    <mat-header-cell *matHeaderCellDef mat-sort-header> Unidades
+                                                        Descartadas
+                                                    </mat-header-cell>
+                                                    <mat-cell *matCellDef="let element">
+                                                        <span>{{element.DiscardedUnits}}</span>
+                                                    </mat-cell>
+                                                    <mat-footer-cell *matFooterCellDef>{{getTotalUnitsDiscarded()}}
+                                                    </mat-footer-cell>
+                                                </ng-container>
+
+                                                <ng-container matColumnDef="Register">
+                                                    <mat-header-cell *matHeaderCellDef mat-sort-header> Data
+                                                    </mat-header-cell>
+                                                    <mat-cell *matCellDef="let element">
+                                                        {{element.Register |
+                                                        date: 'dd/MM/yyyy H:mm'}}
+                                                    </mat-cell>
+                                                    <mat-footer-cell *matFooterCellDef> </mat-footer-cell>
+                                                </ng-container>
+
+                                                <!-- Id Hidden Column -->
+                                                <ng-container matColumnDef="ID">
+                                                    <mat-header-cell *matHeaderCellDef [hidden]="show"> ID
+                                                    </mat-header-cell>
+                                                    <mat-cell [hidden]="show" *matCellDef="let element">
+                                                        {{element.ID}} </mat-cell>
+                                                    <mat-footer-cell *matFooterCellDef [hidden]="show">
+                                                    </mat-footer-cell>
+                                                </ng-container>
+
+                                                <mat-header-row *matHeaderRowDef="displayedColumns4"></mat-header-row>
+                                                <mat-row *matRowDef="let row; columns: displayedColumns4;"></mat-row>
+                                                <mat-footer-row *matFooterRowDef="displayedColumns4; sticky: true">
+                                                </mat-footer-row>
+
+                                                <!-- Row shown when there is no matching data. -->
+                                                <tr class="mat-row" *matNoDataRow>
+                                                    <td class="mat-cell" colspan="4">Nenhum registro encontrado.</td>
+                                                </tr>
+                                            </table>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div style="height:1.5rem;"></div>
                 </div>
             </div>
         </section>
